--- a/src/components/headerMoon.module.scss
+++ b/src/components/headerMoon.module.scss
@@ -1,10 +1,10 @@
 $diameter : 150px;
 $crescent:0.25;
-$top:80px;
 $borderWidth:5px;
+$top:30px;
 
 .circle-header{
-    position: absolute;
+    position: relative;
     display: flex;
     justify-content: center;
     width:100%;
@@ -15,8 +15,7 @@ $borderWidth:5px;
 .circle-frame{
     position: relative;
     border-radius: 50%;
-    background-color:pink;
-    border-color: black;  
+    background-color:burlywood;
     height: $diameter;
     width: $diameter;
   }
