--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,28 +1,40 @@
+html,body {
+  margin:0;
+  padding:0;
+  background-color: lightcyan;}
 
 .container {
-  margin: 0px;
-  padding:0px;
   display:grid;
-  width:100%; 
-  max-width: 1600px;
   font-family: sans-serif;
-  background-color: antiquewhite;
   grid-template-areas: 
-      "hd"
-      "title"
-      "content"
+    "nav"
+    "hd"
+    "content"
       ;
   grid-template-columns: 1fr;
+  grid-template-rows: max-content max-content 1fr;
+  height: 100vw;
+  border: 2px;
+  border-color: black;
+  border-style: dashed;
 }
 
 .header {
-  grid-area: hd;
+  grid-area:"header";
+  border: 2px;
+  border-color: red;
+  border-style: double;
+  height:fit-content;
+  margin-bottom: 50px;
 }
 
-.heading {
-  grid-area:title;
-  color: rebeccapurple;
-  align-self: center;
+.nav-menu{
+  grid-area: "nav";
+  height : fit-content;
+  max-height: 100px;
+  
+  border-color: pink;
+  border-style: dashed;
 }
 
 .nav-links {
@@ -45,7 +57,7 @@
 }
 
 .content{
-  background: white;
+  background: palegoldenrod;
   grid-area: content;
 }
 
