--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,40 +1,55 @@
+$navHeight: 50px;
+
 html,body {
   margin:0;
   padding:0;
-  background-color: lightcyan;}
+  background: whitesmoke;}
 
 .container {
   display:grid;
   font-family: sans-serif;
   grid-template-areas: 
-    "nav"
+    "topRow"
     "hd"
     "content"
       ;
   grid-template-columns: 1fr;
-  grid-template-rows: max-content max-content 1fr;
+  grid-template-rows:$navHeight 200px 1fr ;
   height: 100vw;
   border: 2px;
-  border-color: black;
-  border-style: dashed;
+
+}
+
+.topRow{
+  grid-area:"topRow";
+  display: grid;
+  height: $navHeight;
+  grid-template-areas: "title" "nav";
+  grid-template-columns: minmax(0.5vw,200px) 1fr;
+}
+
+.heading{
+  grid-area: "title" ;
+  top:0px;
+  height: $navHeight;
+  font-size: large;
+  
+  text-align: center;
+  font-style: italic;
 }
 
 .header {
   grid-area:"header";
-  border: 2px;
-  border-color: red;
-  border-style: double;
   height:fit-content;
   margin-bottom: 50px;
 }
 
 .nav-menu{
+  top:0px;
+  left: 0px;
+  position: absolute;
   grid-area: "nav";
-  height : fit-content;
-  max-height: 100px;
-  
-  border-color: pink;
-  border-style: dashed;
+  width:100%
 }
 
 .nav-links {
@@ -57,7 +72,6 @@ html,body {
 }
 
 .content{
-  background: palegoldenrod;
   grid-area: content;
 }
 
