--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,3 +1,4 @@
+
 $navHeight: 50px;
 
 html,body {
@@ -13,11 +14,11 @@ html,body {
     "hd"
     "content"
       ;
-  grid-template-columns: 1fr;
+  grid-template-columns: minmax(1vw,1200px);
   grid-template-rows:$navHeight 200px 1fr ;
   height: 100vw;
-  border: 2px;
-
+  border: 2px;  
+  justify-content: center;
 }
 
 .topRow{
@@ -26,27 +27,24 @@ html,body {
   height: $navHeight;
   grid-template-areas: "title" "nav";
   grid-template-columns: minmax(0.5vw,200px) 1fr;
+  justify-content: center;
 }
 
 .heading{
   grid-area: "title" ;
   top:0px;
+  left: 0px;
   height: $navHeight;
-  font-size: large;
-  
+ /* font-size: large;
   text-align: center;
-  font-style: italic;
+  font-style: italic;*/
 }
 
-.header {
-  grid-area:"header";
-  height:fit-content;
-  margin-bottom: 50px;
-}
 
 .nav-menu{
   top:0px;
   left: 0px;
+  height: $navHeight;
   position: absolute;
   grid-area: "nav";
   width:100%
@@ -59,20 +57,32 @@ html,body {
 }
 .nav-link-item {
   padding-right: 2rem;
+  
+  height: $navHeight;
 }
 .nav-link-text {
   color: black;
 }
 
-.site-title {
-  font-size: 3rem;
-  color: gray;
-  font-weight: 700;
-  margin: 3rem 0;
-}
+.header {
+  grid-area:"header";
+  background-repeat: no-repeat;
+  object-fit:contain; 
+  margin-bottom: 50px;
+  /*
 
+    fill - This is default. The image is resized to fill the given dimension. If necessary, the image will be stretched or squished to fit
+    contain - The image keeps its aspect ratio, but is resized to fit within the given dimension
+    cover - The image keeps its aspect ratio and fills the given dimension. The image will be clipped to fit
+    none - The image is not resized
+    scale-down - the image is scaled down to the smallest version of none or contain
+
+*/
+}
 .content{
+  width: 100%;
+  border: 2px;
+  border-style: dashed;
+  border-color: pink;
   grid-area: content;
 }
-
- 
