--- a/src/components/headerMoon.module.scss
+++ b/src/components/headerMoon.module.scss
@@ -1,16 +1,21 @@
 $diameter : 150px;
 $crescent:0.25;
 $borderWidth:5px;
-$top:30px;
+$shift:50px;
+$banner_height:200px;
 
 .circle-header{
-    position: relative;
+    background-image: url('../images/clouds_banner.jpg');
+    background-size: cover;
+    position:relative;
     display: flex;
     justify-content: center;
     width:100%;
-    height : $diameter;
-    top:$top;
+    top:0px;
+    height:$banner_height;
+    margin-bottom:$shift+20px;
 }
+//box-sizing: border-box;
 
 .circle-frame{
     position: relative;
@@ -18,6 +23,7 @@ $top:30px;
     background-color:rgb(3, 68, 94);
     height: $diameter;
     width: $diameter;
+    top:calc($banner_height - $diameter + $shift);
   }
 
 .circle-moon{
