--- a/src/components/headerMoon.module.scss
+++ b/src/components/headerMoon.module.scss
@@ -3,6 +3,7 @@ $crescent:0.25;
 $borderWidth:5px;
 $shift:50px;
 $banner_height:200px;
+$moonColor:rgb(3, 68, 94);
 
 .circle-header{
     background-image: url('../images/clouds_banner.jpg');
@@ -20,7 +21,7 @@ $banner_height:200px;
 .circle-frame{
     position: relative;
     border-radius: 50%;
-    background-color:rgb(3, 68, 94);
+    background-color:$moonColor;
     height: $diameter;
     width: $diameter;
     top:calc($banner_height - $diameter + $shift);
