--- a/src/components/visitCard.scss
+++ b/src/components/visitCard.scss
@@ -12,7 +12,7 @@ but finally rather used external link + loader plugin
 
 $lato: "Lato";
 $dark: rgb(21, 4, 80);
-$light: #8390bc;
+$light: #d9dff1;
 $hover: #3f3f3f;
 
 /* CENTERING */
@@ -47,20 +47,12 @@ h3{
    left: 45%;
 }
 
-/* THE FRONT */
-
-.front{
-   // background-image:url(//background-image:url( [600px * 350px]);
-   background-size:cover;
-   background-color: $dark;
-}
-
 /* /end */
 
 /* THE BACK */
 
 .back{
-   //background-image:url( [600px * 300px]);
+   background-image:url( "../images/card2.png");
    background-color: $light;
    background-size:cover;
    
@@ -137,58 +129,25 @@ h3{
    }
 }
 
+/*
+.left-box{
+   background-color: $dark;
+   width: 50px;
+   height: 350px;
+   background-size:cover;
+}
+*/
+
 /* /end */
 
 /* THE FLIP EFFECT */
-
-/* entire container, keeps perspective */
-.flip-container {
-	perspective: 1000px;
-}
-	/* flip the pane when hovered */
-	.flip-container:hover .flipper, .flip-container.hover .flipper {
-		transform: rotateY(180deg);
-      cursor: pointer;
-	}
 
 .flip-container, .front, .back {
    height: 350px;
    width: 600px;
 }
 
-.flipper {
-	transition: 0.5s;
-	transform-style: preserve-3d;
-	position: relative;
-}
-
 .front, .back {
 	backface-visibility: hidden;
 	position: absolute;
 }
-
-.front {
-	z-index: 2;
-	/* firefox 31 */
-	transform: rotateY(0deg);
-}
-
-.back {
-	transform: rotateY(180deg);
-}
-
-.vertical.flip-container {
-	position: relative;
-}
-
-	.vertical .back {
-		transform: rotateX(180deg);
-	}
-
-	.vertical.flip-container .flipper {
-		transform-origin: 100% 400x; 
-	}
-
-	.vertical.flip-container:hover .flipper {
-		transform: rotateX(-180deg);
-	}
