--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,14 +1,7 @@
 
-p{
-  font-size:1.1rem;
-  margin-bottom:2.5rem;
-  font-style:italic;
-}
 
-
-.sub-headers h3{
+.sub-headers{
   margin-bottom:2rem;
-  margin-top:2rem;
   text-align:left;  
   justify-content:left;
   font-size: large;
@@ -23,11 +16,12 @@ p{
   font-size:1.1rem;
   margin-bottom:1.5rem;
   text-align:left;
-  margin-bottom:1.5rem;
   font-style:italic;
 }
 
 .intro-p{
 text-align: center;
-margin-bottom: 2.5rem;
+margin-bottom: 1.5rem;
+padding: 5%;
+margin:0px;
 }
