--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,14 +1,15 @@
 
 
 .sub-headers{
-  margin-bottom:2rem;
+  margin-top:2rem;
   text-align:left;  
   justify-content:left;
-  font-size: large;
 }
 
 .techno-list{
-  margin-bottom:1.5rem;
+  margin-bottom:1rem;
+  margin-top: 2rem;
+  text-decoration: underline;
 }
 
 
@@ -21,7 +22,7 @@ p{
 
 .intro-p{
 text-align: center;
-margin-bottom: 1.5rem;
+margin-top: 1rem;
 padding: 5%;
 margin:0px;
 }
