--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,9 +1,10 @@
 
 
 .sub-headers{
-  margin-top:2rem;
+  margin-top:1rem;
   text-align:left;  
   justify-content:left;
+  color:rgb(17, 136, 183);
 }
 
 .techno-list{
@@ -21,8 +22,21 @@ p{
 }
 
 .intro-p{
+margin-left: auto; 
+margin-right: auto;
+padding-top: 1rem;
+max-width: 90%;
 text-align: center;
-margin-top: 1rem;
-padding: 5%;
-margin:0px;
+}
+
+@media(min-width:600px){
+  .intro-p{
+    max-width: 80%;
+    }
+}
+
+@media(min-width:1000px){
+  .intro-p{
+    max-width: 800px;
+    }
 }
